--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "scripts": {
         "start": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "preview": "vite preview"
     }
 }
