--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Copy data folder to build
+        run: cp -r data build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
